--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^5.3|^7.0"
+        "php": ">=5.3"
     },
     "bin": [
         "bin/fixup_source_files.php"
