Major overhaul with improvements and new features (release 0.5.0)
Features:
- Unified the styling interface to a flat '<group>.<style>', due to this the
  following style names have changed: tabs-mode, tabs-width, decor-comments.
- Support for fully dynamic style groups.
- Added JSON syntax and indentation support.
- Added command line switch '--force' to write files even if they are garbled.
- Improved default help output.
- System exit codes are now more meaningful according to Linux specs.

Project:
- Added support for static analysis in CI.
- Extended testsuite with more functionality.

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,35 @@
             "email": "giovanni@giacobbi.net"
         }
     ],
+    "config": {
+        "autoloader-suffix": "__thgnet_fixup"
+    },
     "require": {
         "php": ">=5.3"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^1.10"
+    },
     "bin": [
         "bin/fixup_source_files.php"
-    ]
+    ],
+    "scripts": {
+        "test:syntax:fixup": "./bin/fixup_source_files.php -ignore-path tests/samples-syntax/ check",
+        "test:syntax": [
+            "@test:syntax:fixup"
+        ],
+        "test:static:phpstan": "./vendor/bin/phpstan analyse -c .phpstan.neon --no-progress --no-ansi",
+        "test:static": [
+            "@test:static:phpstan"
+        ],
+        "test:system": [
+            "cd tests; ./run_test_case.php cases-basic",
+            "cd tests; ./run_test_case.php cases-garbled"
+        ],
+        "test": [
+            "@test:syntax",
+            "@test:static",
+            "@test:system"
+        ]
+    }
 }
