--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,36 @@
 stages:
   - test
 
+tests_basic:
+  stage: test
+  image: registry.gitlab.com/thgnet/docker-centos7wre:v2.1
+  variables:
+    RUNTIME_TYPE: development
+    RUNTIME_VERSION: php72
+    RUNTIME_EXTENSIONS: xdebug
+  before_script:
+   - xcomposer install -n --no-ansi
+  script:
+   - xcomposer run test
+
 tests_php_versions:
   stage: test
-  image: registry.gitlab.com/thgnet/docker-centos7wre:v2
+  needs: [ "tests_basic" ]
+  image: registry.gitlab.com/thgnet/docker-centos7wre:v2.1
   variables:
     RUNTIME_TYPE: development
   parallel:
     matrix:
-      - RUNTIME_VERSION: php53
-      - RUNTIME_VERSION: php56
-      - RUNTIME_VERSION: php72
-      - RUNTIME_VERSION: php74
-      - RUNTIME_VERSION: php80
-      - RUNTIME_VERSION: php81
-      - RUNTIME_VERSION: php82
-      - RUNTIME_VERSION: php83
+     - RUNTIME_VERSION: php53
+     - RUNTIME_VERSION: php56
+     - RUNTIME_VERSION: php72
+     - RUNTIME_VERSION: php74
+     - RUNTIME_VERSION: php80
+     - RUNTIME_VERSION: php81
+     - RUNTIME_VERSION: php82
+     - RUNTIME_VERSION: php83
   script:
-   - ./bin/fixup_source_files.php check
-   - cd tests; ./run_test_case.php cases-basic
+   - ./bin/fixup_source_files.php -ignore-path tests/samples-syntax/ check
+   - cd tests
+   - ./run_test_case.php cases-basic
+   - ./run_test_case.php cases-garbled
