Implemented file names to group matching support (release 0.5.1)

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "thgnet/fixup-source-files",
     "description": "Just another source files fixer",
-    "license": [ "GPL-3.0-only" ],
+    "license": [
+        "GPL-3.0-only"
+    ],
     "authors": [
         {
             "name": "Giovanni Giacobbi",
