Added BOM handling and new indent tabs mode (release 0.6.0)
Features:
- The 'ws' style now accepts a comma-separated list and includes the new
  features 'apply-bom' and 'strip-bom'.
- The 'tabs-mode' now supports 'indent' mode.

Project:
- Updated composer package 'phpstan/phpstan' (1.10.50 -> 1.10.55).
- No longer executing the CI for tagging actions.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ tests_basic:
 
 tests_php_versions:
   stage: test
+  except:
+    - tags
   needs: [ "tests_basic" ]
   image: registry.gitlab.com/thgnet/docker-centos7wre:v2.1
   variables:
